# clamui

./: README.md  clamui.conf  pyproject.toml  shell.nix
src/anomaly_action/: main.py
src/clamui/: __init__.py  app.py  dashboard.py  log_parser.py  utils.py  widgets.py
