[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clamui"
version = "0.4.0"
description = "GTK4 ClamAV dashboard (health, logs, daemon, scans)"
readme = "README.md"
authors = [{ name = "Your Name" }]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = ["PyGObject>=3.44"]

[project.scripts]
clamui = "clamui.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
